# clash-tangnano20k

./: .gitignore  CHANGELOG.md  Makefile  README.md  clash-tangnano20k.cabal  tangnano20k.cst
app/: Button.hs  LED.hs  Main.hs  Types.hs  UART.hs
