cabal-version: 3.8
name:           clash-tangnano20k
version:        0.1.0.0
build-type:     Simple

executable clash-tangnano20k
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions:  
      NoImplicitPrelude
    , DataKinds
    , NumericUnderscores
    , TypeApplications
  ghc-options:         -O2
  build-depends:
      base ^>=4.16.4.0
    , clash-prelude ^>=1.8.2
